--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -6,6 +6,38 @@
 */
 
 .order-enter
+  max-height 0
+  padding 0 !important
+  transform translateX(-120%)
+  transition .5s
+  &.order-enter-active
+    max-height 60px
+    padding 2rem 0 !important
+    transform: translateX(0)
+
+.order-exit
+  transform translateX(0)
+  transition .5s
+  &.order-exit-active
+    transform: translateX(120%)
+    padding 0
+
+.count-enter
+  transition .5s
+  transform translateY(100%)
+  &.count-enter-active
+    transform translateY(0)
+
+.count-exit
+  position absolute
+  left 0
+  bottom 0
+  transition .5s
+  transform translateY(0)
+  &.count-exit-active
+    transform translateY(-100%)
+
+/* .order-enter
   transform: translateX(-120%)
   transition 0.5s
   max-height: 0
@@ -40,4 +72,4 @@
   bottom 0
   &.count-exit-active
     background green
-    transform translateY(-100%) scale(3)
+    transform translateY(-100%) scale(3) */
